--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/SantasToyFactory.DataLayer.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/SantasToyFactory.DataLayer.csproj
@@ -58,7 +58,8 @@
     <Compile Include="GroupAge.cs" />
     <Compile Include="Continent.cs" />
     <Compile Include="Person.cs" />
-    <Compile Include="ProductType.cs" />
+    <Compile Include="Producer.cs" />
+    <Compile Include="ToyType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Town.cs" />
     <Compile Include="Toy.cs" />
