--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/App.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/App.config
@@ -11,7 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SantasToyFactoryDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SantasToyFactoryDB" connectionString="Data Source=.;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
