--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Tests/App.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Tests/App.config
@@ -9,7 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings></appSettings>
-  <connectionStrings></connectionStrings>
+  <connectionStrings>
+    <add name="SantasToyFactoryDB" connectionString="Data Source=.;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
