--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/App.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/App.config
@@ -13,6 +13,9 @@
   <connectionStrings>
     <add name="SantasToyFactoryDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <connectionStrings>
+    <add name="SantasToyFactoryDBSQLServer" connectionString="Data Source=.;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
