added years to sql database

--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/SantasToyFactory.DataLayer.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/SantasToyFactory.DataLayer.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Repositories\TownsRepository.cs" />
     <Compile Include="Repositories\ToysRepository.cs" />
     <Compile Include="Repositories\ToyTypesRepository.cs" />
+    <Compile Include="Repositories\YearDatesRepository.cs" />
     <Compile Include="SantasToyFactoryMongoData.cs" />
     <Compile Include="SantasToyFactorySqlContext.cs" />
     <Compile Include="SantasToyFactoryDatabase.cs" />
