--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/App.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/App.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SantasToyFactoryDB" connectionString="Data Source=./SQLEXPRESS;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SantasToyFactoryDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SantasToyFactoryDBSQLServer" connectionString="Data Source=.;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
