zip extract changed

--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataOperations/SantasToyFactory.DataOperations.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataOperations/SantasToyFactory.DataOperations.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeliveryReportsReader.cs" />
     <Compile Include="ExcelDataReader.cs" />
     <Compile Include="ExcelManipulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
