Creating Json Reports and Loading Them in MySql
You will need to install Telerik Data Access ORM. I am using Json.Net
nuget library for serialization. You will need to use root user and
remove the user password in MySql. You can remove it with this  - SET
PASSWORD FOR root@localhost=PASSWORD('');

--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/App.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/App.config
@@ -13,5 +13,6 @@
   <connectionStrings>
     <add name="SantasToyFactoryDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SantasToyFactoryDBSQLServer" connectionString="Data Source=.;Initial Catalog=SantasToyFactoryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="connectionId" connectionString="Server=localhost;Uid=root;Database=JsonReports;" />
   </connectionStrings>
 </configuration>
