--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
@@ -44,6 +44,10 @@
     <Reference Include="MongoDB.Driver">
       <HintPath>..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -56,8 +60,11 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Telerik.OpenAccess, Version=2014.2.711.1, Culture=neutral, PublicKeyToken=7ce17eeaf1d59342, processorArchitecture=MSIL" />
+    <Reference Include="Telerik.OpenAccess.35.Extensions, Version=2014.2.711.1, Culture=neutral, PublicKeyToken=7ce17eeaf1d59342, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonReport.cs" />
     <Compile Include="MongoToSqlMigrationController.cs" />
     <Compile Include="SantasToyFactoryConsoleClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,6 +86,10 @@
     <ProjectReference Include="..\SantasToyFactory.Models\SantasToyFactory.DataLayer.csproj">
       <Project>{87e22af7-b06f-4280-9697-7b0366bb2297}</Project>
       <Name>SantasToyFactory.DataLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SantasToyFactory.MySqlConnector\SantasToyFactory.MySqlConnector.csproj">
+      <Project>{6f9c2621-695c-4bde-881b-157dcaa75c07}</Project>
+      <Name>SantasToyFactory.MySqlConnector</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
