--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
@@ -69,6 +69,7 @@
     <Compile Include="SantasToyFactoryConsoleClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleUtilities.cs" />
+    <Compile Include="XMLReportGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
