--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/packages.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.93.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.93.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.93.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.93.0" targetFramework="net45" />
 </packages>
