--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.SqliteDb/SantasToyFactory.SqliteDb.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.SqliteDb/SantasToyFactory.SqliteDb.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="SantasToyFactorySqliteContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToyProductionDetailsRepository.cs" />
