added XML with additional information for children

--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/SantasToyFactory.ConsoleClient.csproj
@@ -83,10 +83,14 @@
     <Compile Include="SantasToyFactoryConsoleClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleUtilities.cs" />
+    <Compile Include="XMLReader.cs" />
     <Compile Include="XMLReportGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Children-Behaviors.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +116,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Children-Behaviors.xml" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
