--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/packages.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.ConsoleClient/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.93.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.93.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.93.0" targetFramework="net45" />
