--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/packages.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataLayer/packages.config
@@ -3,4 +3,5 @@
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
 </packages>
