--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/packages.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.Models/packages.config
@@ -4,4 +4,5 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
 </packages>
